# g3blend

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
doc/: genomfle.ksy  xact.ksy  xmot.ksy  xshmat.ksy
g3blend/: __init__.py  extension.py  log.py  meta.py  util.py
g3blend/io/: __init__.py  binary.py  binary_serialize.py  genome_file.py
g3blend/io/animation/: chunks.py  xact.py  xmot.py
g3blend/io/property_sets/: __init__.py  color_src.py  decorator.py  default_property_set.py  property.py  property_desc.py  property_set.py  registry.py  resource_base.py  resource_mesh_complex.py  resource_mesh_lod.py  resource_shader_material.py  shader.py  shader_base.py  shader_element_base.py  util.py
g3blend/io/property_types/: __init__.py  bool.py  box.py  char.py  date_time.py  decorator.py  float.py  float_color.py  property_container.py  registry.py  string.py  vector.py  vector2.py
g3blend/io/structs/: __init__.py  mesh_element.py
g3blend/io/types/: __init__.py  color_src_proxy.py  float_color.py  guid.py  math.py  misc.py  point.py  quaternion.py  rect.py  tex_coord_src_proxy.py  vector4.py
g3blend/ksy/: genomfle.py  kaitaistruct.py  report_wrong_version.py  xact.py  xmot.py
g3blend/operators/: io_export_xact.py  io_export_xmot.py  io_import_world.py  io_import_xact.py  io_import_xcmsh.py  io_import_xmot.py
g3blend/ui/: __init__.py  frame_effects.py  helper.py  io_export_xact.py  io_export_xmot.py  io_import_world.py  io_import_xact.py  io_import_xcmsh.py  io_import_xmot.py
